Revert "Merge remote-tracking branch 'origin/AdminGestionReserva'"
This reverts commit 142509176f452b7a4e9be50be42ba6b18bc11eac, reversing
changes made to c3ff170a1127ff482181bf008576e6b5e5039cd4.
