# routes/admin.js
@@ -12,6 +12,5 @@ router.get('/salas-reservadas-dia', AdminControllers.getAdminSalasReservadasDia)
 router.get('/salas-reservadas-ano', AdminControllers.getAdminSalasReservadasAno)
 router.get('/todas-salas-reservadas-mes/:ano/:mes', AdminControllers.getAdminTodasSalasReservadasMes)
 router.get('/todas-salas-reservadas-ano/:ano', AdminControllers.getAdminTodasSalasReservadasAno)
-router.post('/subir-evento', AdminControllers.postAdminSubirEvento)
 
 module.exports = router;
